# tanzanite

./: CMakeLists.txt  LICENSE  NOTICE.md  README.md  test.cpp
lexer/: lexer.cpp  lexer.hpp  tokens.cpp
parser/: lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  tokens.cpp  tokens.hpp
parser/ast/: nodes.cpp  nodes.hpp
parser/lexer/: lexer.cpp  lexer.hpp
parser/parser/: body.cpp  conditions.cpp  function.cpp  operator.cpp  value.cpp  variable.cpp
